public/CSS/styles.css
/* ... */
.pg3ShapeTxtTop{
position:absolute;
top:0;
right:0;
color:white;
/*padding matches h1 space*/
padding-right:3.5rem;

}
.pg3ShapeTxtBottom{

  position:absolute;
    left:0;
    bottom:0;
    color:white;
    padding-left:3.5rem;
}


.bestCardsContainer{/*unnecessary take outhtml too*/
  /*width:inherit;
  height:inherit;*/
  /*display:block;*/

}
.magnifier{
  width:100px;
  height:100px;
    background:green;

  /*or use bootstrap center-block*/
  display: block;
    margin-right: auto;
    margin-left: auto;
}


.pg4Text{
  /*i'm taking element from the h1 because i want the h1 properties but not the sizes
when refactor set the h's to the same font but different font sizes and have this one as h1
  */
  font-size: 5rem;
  font-family: 'PT Serif', serif;
  line-height: 1.5em;

  color:black;
  position:absolute;
  right:0;
  top:0;

  /*use margin or */
  margin:5vh 5vw;
}



.corner-background {
  background-color: grey;
  position: fixed;
  height: 375px;
  width: 350px;
  Transform: rotate(45deg);
  bottom: -200px;
  Left: -200px;
  opacity: 0;
  z-index:9;
}

.corner-table {
  text-align: center;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  max-height: 30px;
  border: 0;
  padding: 0px 75px 0px 75px;
  margin: 0px 0px 5px 7px;
  font-size: 3rem;
  color: #262626;
}

.corner-links {
  Transform: rotate(-45deg);
  max-height: 60px;
  border: 0;
  padding: 0;
  margin: 0;
}

#chosen-beverage {
  opacity: 0;
}

.fade-in-beverage {
  /*careful i am animating it twice as fading in the section it is in too*/
  animation: fadeIn 1.5s linear;
  animation-delay: 1s;
  animation-fill-mode: forwards;
}

.fade-in-corner {
  animation: fadeIn 1.5s linear forwards;
  animation-fill-mode: forwards;
}

.end-rolling {
  animation: spin ease-out linear 1s forwards;
}

@keyframes spin {

  /* trick will be starting from position it is in  */
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(720deg);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/*///////////////////////////////////PG4*/
/*
.page4X0Y0 {
  position: relative;
  height: 100vh;
  width: 100vw;
  left: 100vw;
  /*top level*/
  /*pink yellow slice*/
  /*should percents be vh vw*/
  /*because the size of the two pink sections is different the colours dont blend perfectly*/
  /*this is currently fine as colurs will probably change */
  /*
  background: linear-gradient(-165deg, white, plum 43%, plum, transparent, yellow, yellow 45%, white), black;
  background-position: center;
}

*/
.page4X0Y0 {
  /*to blend the edge of pg4 and 2 could use blur*/
  position: absolute;
  height: 100vh;
  width: 100vw;
  left: 100vw;
    background: linear-gradient(-165deg, white, plum 43%, plum,  yellow, yellow 45%, white);
  background-position: center;

}
.page4X0Y0::after{
  position: absolute;
  height: 100vh;
  width: 100vw;
  /*left: 100vw;*/
/*195 same as -165*/


content:'';
  /*some options for the line with different looks*/
   /*background: linear-gradient(-165deg, white, plum 43%, black 43%, black 43.5%, transparent 45%);*/
  background: linear-gradient(-165deg, white, plum 43%, black 43%, black 44%, transparent 44%);
    background-position: center;
  z-index:2;
}

.pg4Text{
  /*i'm taking element from the h1 because i want the h1 properties but not the sizes
when refactor set the h's to the same font but different font sizes and have this one as h1
  */
  font-size: 5rem;
  font-family: 'PT Serif', serif;
  line-height: 1.5em;

  color:black;
  position:absolute;
  right:0;
  top:0;

  /*use margin or */
  margin:5vh 5vw;
  z-index:3;
}

.cardPG4{
  width:125px;
  height:150px;
  margin:0px 10px 10px;
  background-color:lightCyan;
  font-size:5rem;
  position:absolute;
  border:2.5px;
  border-radius:5px;

}

/*////////////////// CARD STYLES ///////////////////////*/

.submitButtonNoStyle{
  background:none;
  color:inherit;
  border:none;
  padding:0;margin:0;
  font:inherit;
  outline:inherit;
  width: 19px;
  height:15px;/*inherit;*/
}

.aCard{
  background:beige;


  width:125px;
  height:150px;
  border: 2.5px solid black;
  border-radius: 5px;

margin:0 auto;
visibility:inherit;

}
.topRightProjectTechnologiesArea{
  height:auto;
  width:19px;

  float:right;
  background:lightCyan;
  margin:0.5px 5px;
  padding:2px 0;
max-height:150px;


  overflow:hidden;
}
/*so if you making the form have a larger margin find actually the button is triggered up to 10px below
but there are no boxed ending there on pesticide so i think it is the button click area, some reading suggests can effect it with whether elements are inline block etc or text aligned for position
im going to leave it till later*/
.formTechBtn{margin: 0 0 2px 0; padding:0; width:19px; height:15px;}
.technologyButtonImg{
  display: block;
  width:15px;
  height:15px;
  overflow:hidden;
  padding:0;margin:0 auto;

}

.technologyButton img{
padding:0;margin:0;
  width: 15px;
  height: 15px;}

.technologyCaracellIsDisplaying {
   width: 15px;
  height: 15px;
  background:PaleGreen;
 border: 2px solid green;
  border-radius: 5px;
  padding:0;
  margin:0;
}

.aCardWritingArea
{
   width:auto;
  height:auto;
  padding:0 0 0 10px; /*width of the balls div and a bit extra of the right marble area*/
    overflow:hidden;

}
.projectTitle{
  text-align: center;

  font-size:0.9rem;
  font-family: 'PT Serif, Serif';
  line-height:1.5em;
  margin:5px 0 3px;
  height:20px;

}
.projectImage{
 height:40px; /*want 30% of the box really*/
width:auto;
display: block;
margin-left: auto;
margin-right: auto;

}
.projectImage img {

  max-width: 100%;
  max-height: 100%;}

.projectDescriptionSubtitle{
  font-size:0.6rem;
  font-family: 'PT Serif, Serif';
  line-height:1rem;
  margin:1px 0 2px;
}
/* ... */

